add class bg-2 and bg-3

--- a/simply_me.css
+++ b/simply_me.css
@@ -2,3 +2,11 @@
 	background-color: green;
 	color: white;
 }
+.bg-2{
+	background-color: #474e5d;
+	color: white;
+}
+.bg-3{
+	background-color: white;
+	color: green;
+}
